ingress/gateway-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: go-apps-route
spec:
  hosts:
    - "*"
  gateways:
    - go-apps-gateway
  http:
    - match:
        - uri:
            prefix: /app1
          headers:
            use-preview:
              exact: "true"
      route:
        - destination:
            host: go-app1-service
            subset: preview
            port:
              number: 3000
    - match:
        - uri:
            prefix: /app1
      route:
        - destination:
            host: go-app1-service
            subset: active
            port:
              number: 3000
    - match:
        - uri:
            prefix: /app2
          headers:
            use-preview:
              exact: "true"
      route:
        - destination:
            host: go-app2-service
            subset: preview
            port:
              number: 3000
    - match:
        - uri:
            prefix: /app2
      route:
        - destination:
            host: go-app2-service
            subset: active
            port:
              number: 3000
    - match:
      - uri:
          prefix: /app3
        headers:
          use-preview:
            exact: "true"
      route:
        - destination:
            host: go-app3-preview-service
            port:
              number: 3000
    - match:
        - uri:
            prefix: /app3
      route:
        - destination:
            host: go-app3-service
            port:
              number: 3000
